--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 </head>
+
 <body>
     <section id="container">
         <input type="checkbox" id="nav" class="hidden">
@@ -34,7 +36,8 @@
     <section id="header">
         <div class="content_header">
             <h1>Nous aidons à bâtir<br>laconfionce dans la<br>conception</h1>
-            <p>Nous sommes passionnés par la création de designs<br>adaptatifs qui amélioreront votre présence numérique et<br> augmenteront le taux de rétention et la confiance des<br> visiteurs de votre sit web.  </p>
+            <p>Nous sommes passionnés par la création de designs<br>adaptatifs qui amélioreront votre présence numérique
+                et<br> augmenteront le taux de rétention et la confiance des<br> visiteurs de votre sit web. </p>
             <a href="#">Commencez Maintenant</a>
         </div>
         <div class="vid_header">
@@ -45,6 +48,7 @@
         </div>
 
     </section>
-    
+
 </body>
+
 </html>
